--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1><img src="Logo.png" alt="Velocitee Labs Logo" width="500" height="600"></h1>
+				<h1><img src="images/Logo_white_noback.png" alt="Velocitee Labs Logo" width='30%'></h1>
 				<p>A simple template for telling the world when you'll launch<br />
 				your next big thing. Brought to you by <a href="http://velociteelabs.github.io">Velocitee Labs</a>.</p>
 			</header>
@@ -35,7 +35,7 @@
 					<li><a href="mailto:velociteelabs@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Untitled.</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; Velocitee Laboratories</li><li>Themes: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</footer>
 
