--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
 		<!-- Scripts -->
 			<script src="assets/js/main.js"></script>
+<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/84418999f1037a888443cd2ec/38466647f183d51f81caf512e.js");</script>
 
 	</body>
 </html>
