--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
 		<!-- Header -->
 			<header id="header">
 				<h1><img src="images/Logo_whitetxt_noback.png" alt="Velocitee Labs Logo" width='30%'></h1>
-				<p>A simple template for telling the world when you'll launch<br />
-				your next big thing. Brought to you by <a href="http://velociteelabs.github.io">Velocitee Labs</a>.</p>
+				<p style="text-align=justify;">Our company is focused on providing a wide range of solutions to fix today's problems. <br>
+				Currently, Velocitee Labs is tackling the shortcomings of motorcycle safety. If you are <br>
+ 				interested in getting updates about our product, please enter your email address below. <br>
+ 				If you are interested	in investing in Velocitee Labs, please reach out to us via email <br>
+				(velociteelabs@gmail.com) to set up a meeting. </p>
 			</header>
 
 			<!-- Begin Mailchimp Signup Form -->
@@ -32,11 +35,11 @@
 			<form action="https://github.us10.list-manage.com/subscribe/post?u=84418999f1037a888443cd2ec&amp;id=264888577e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 			    <div id="mc_embed_signup_scroll">
 
-				<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+				<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email address" required>
 			    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 			    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_84418999f1037a888443cd2ec_264888577e" tabindex="-1" value=""></div>
 					<br>
-					<div class="clear"><input type="submit" value="Get updates on our product!" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+					<div class="clear"><input type="submit" value="Get updates on our products!" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
 			    </div>
 			</form>
 			</div>
@@ -47,13 +50,13 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+					<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
 					<!-- <li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li> -->
 					<li><a href="mailto:velociteelabs@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Velocitee Laboratories</li><li>Themes: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; Velocitee Laboratories</li><li>All rights reserved. </li>
 				</ul>
 			</footer>
 
