--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 					<div class="response" id="mce-success-response" style="display:none"></div>
 				</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 			    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_84418999f1037a888443cd2ec_264888577e" tabindex="-1" value=""></div>
-			    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+					<br>
+			    <div class="clear"><input type="submit" value="Join our Mailing List!" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
 			    </div>
 			</form>
 			</div>
