--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 			<header id="header">
 				<h1><img src="images/Logo_whitetxt_noback.png" alt="Velocitee Labs Logo" width='30%'></h1>
 				<p style="text-align=justify;">Our company is focused on providing a wide range of solutions to fix today's problems. <br>
-				Currently, Velocitee Labs is tackling the shortcomings of motorcycle safety. If you are <br>
- 				interested in getting updates about our product, please enter your email address below. <br>
- 				If you are interested	in investing in Velocitee Labs, please reach out to us via email <br>
+				Currently, Velocitee Labs is tackling the shortcomings of motorcycle safety. <br>
+				If you are interested in getting updates about our product, please enter your email address below. <br>
+ 				If you are interested in investing in Velocitee Labs, please reach out to us via email <br>
 				(velociteelabs@gmail.com) to set up a meeting. </p>
 			</header>
 
