--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
 			<!-- Begin Mailchimp Signup Form -->
-			<div id="mc_embed_signup">
+			<div id="mc_embed_signup input.email">
 			<form action="https://github.us10.list-manage.com/subscribe/post?u=84418999f1037a888443cd2ec&amp;id=264888577e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 			    <div id="mc_embed_signup_scroll">
 
