--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
-					<!-- <li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li> -->
 					<li><a href="mailto:velociteelabs@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="https://twitter.com/VelociteeL" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://www.instagram.com/velociteelabs/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="https://www.facebook.com/velociteelaboratories/" class="icon brands fa-facebook"><span class="label">Facebook</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Velocitee Laboratories</li><li>All rights reserved. </li>
