--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 				(velociteelabs@gmail.com) to set up a meeting. </p>
 			</header>
 
+		<body>
 
 			<!-- Begin Mailchimp Signup Form -->
 		<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
@@ -40,11 +41,11 @@
 		    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 		    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_84418999f1037a888443cd2ec_264888577e" tabindex="-1" value=""></div>
 				<br>
-				<div class="clear"><input type="submit" value="Join our mailing list!" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+				<div class="clear" style="color:#6ec7b1"><input type="submit" value="Join our mailing list!" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
 		    </div>
 		</form>
 		</div>
-
+	 </body>
 		<!--End mc_embed_signup-->
 			<br>
 			<!--End mc_embed_signup-->
