--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<!-- Begin Mailchimp Signup Form -->
 		<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
 		<style type="text/css">
-			#mc_embed_signup{ width:1000px;}
+			#mc_embed_signup{width:1000px;}
 			/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
 			   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
 		</style>
@@ -41,7 +41,7 @@
 		    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 		    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_84418999f1037a888443cd2ec_264888577e" tabindex="-1" value=""></div>
 				<br>
-				<div class="clear" style="color:#6ec7b1"><input type="submit" value="Join our mailing list!" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+				<div class="clear" ><input type="submit" value="Join our mailing list!" style="color:#6ec7b1" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
 		    </div>
 		</form>
 		</div>
