--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 		    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_84418999f1037a888443cd2ec_264888577e" tabindex="-1" value=""></div>
 				<br>
-				<div class="clear" ><input type="submit" value="Join our mailing list!" style="color:#6ec7b1" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+				<div class="clear" ><input type="submit" value="Join our mailing list!" style="color:#6ec7b1;" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
 		    </div>
 		</form>
 		</div>
